# wx-info

./: .gitignore  LICENSE  README.md  docker-compose.airflow.yml  docker-compose.app.yml  docker-compose.yml  env.example  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  api.py  db.py  metrics.py  pipeline.py  transform.py
dags/: weather_pipeline_dag.py
docker/: Dockerfile.app  README.md
scripts/: docker_network_setup.sh  entrypoint.sh  env_setup.sh
tests/: test_api.py  test_db.py  test_pipeline.py  test_transform.py
